--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Email-Form</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="../static/styles.css" />
   </head>
   <body>
     <div class="con2">
       <a href="/">
-        <h4 class="admin">Logout</h4>
+        <h4 class="admin">LogOut</h4>
       </a>
     </div>
 
     <div class="container">
       <div class="cont">
-        <h2>Dashboard</h2>
+        <h2>DASHBOARD</h2>
         <h4 style="color: rgba(0, 0, 0, 0.61);">Emails: {{count}} </h5>
           {% for i in users %}
           <h3> {{i}} </h3>
